--- a/index.html
+++ b/index.html
@@ -469,17 +469,15 @@
 			<center>
 			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search For Places..." title="Type in a name">
 			<ul id="myUL">
-			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html#Gateway-Of-India">Gateway Of India, Mumbai, India, Asia</a></li>
-			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html#Goa">Goa, India, Asia</a></li>
-			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html#Taj-Mahal">Taj Mahal, Agra, India, Asia</a></li>
-			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html">India, Asia</a></li>
-			<li><a href="Continents\Asia\Destination Explorer - Asia.html" target="_blank">Asia</a></li>
-			<li><a href="Continents\Africa\Destination Explorer - Africa.html" target="_blank">Africa</a></li>
-			<li><a href="Continents\AustralliaOceania\Destination Explorer - AustralliaOceania.html" target="_blank">Australlia/Oceania</a></li>
-			<li><a href="Continents\Europe\Destination Explorer - Europe.html" target="_blank">Europe</a></li>
-			<li><a href="Continents\North America\Destination Explorer - North America.html" target="_blank">North America</a></li>
-			<li><a href="Continents\South America\Destination Explorer - South America.html" target="_blank">South America</a></li>
-			<li><a href="Continents\Antarctica\Destination Explorer - Antarctica.html" target="_blank">Antarctica</a></li>
+			<li><a href="Places/Destination Explorer - India.html">Explore All</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Gateway-Of-India">Gateway Of India, Mumbai</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Goa">Goa, India, Asia</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Golden-Temple">Golden Temple, Amritsar, Punjab</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Kutch">Kutch, Gujarat</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Ladakh">Ladakh</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Red-Fort">Red Fort, Mumbai</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Statue-Of-Unity">Statue Of Unity, Gujarat</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Taj-Mahal">Taj Mahal, Agra</a></li>
 			</ul>
 			</center>
 			</div>
@@ -487,90 +485,88 @@
                  <div class="blogs">
                      <a href="#">
                      <div class="img">
-                         <img src="Continents/Asia/images/Thumbnail-Asia.jpg" alt="blog-one">
-                        <div class="blog-date">8 Countries to visit</div>
+                         <img src="https://images.pexels.com/photos/1603650/pexels-photo-1603650.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="blog-one">
+                        <div class="blog-date">Agra</div>
                      </div>
                      <div class="blog-text">
-                         <h3><a href="Continents\Asia\Destination Explorer - Asia.html">Asia</a></h3>
-                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias dolore recusandae illum, corrupti quo 
-                             veniam saepe aliquid! Quis voluptates ratione consequuntur vel, perferendis cum provident? Magnam fugiat voluptas
-                              libero.</p>
+                         <h3><a href="Places/Destination Explorer - India.html#Taj-Mahal">Taj Mahal</a></h3>
+                         <p>Construction of the mausoleum was essentially completed in 1643, but work continued on other phases of the project for another 10 years.
+						 The Taj Mahal complex is believed to have been completed in its entirety in 1653 at a cost estimated at the time to be around ₹32 million, which in 2020 would be approximately ₹70 billion (about US $1 billion).</p>
                      </div></a>
                  </div>      
                  <div class="blogs">
                     <a href="#">
                     <div class="img">
-                        <img src="Continents/Africa/images/Thumbnail-Africa.jpg" alt="blog-two">
-                        <div class="blog-date">8 Countries to visit</div>
+                        <img src="https://images.pexels.com/photos/5205083/pexels-photo-5205083.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="blog-two">
+                        <div class="blog-date">The Northern Part</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\Africa\Destination Explorer - Africa.html">Africa</a></h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt maiores, 
-                            recusandae cupiditate ducimus a non tempora, architecto obcaecati eaque ipsum assumenda harum dolorum iusto tenetur
-                             eius eligendi dolor magnam sit!</p>
+                        <h3><a href="Places/Destination Explorer - India.html#Ladakh">Ladakh</a></h3>
+                        <p>In the past, Ladakh gained importance from its strategic location at the crossroads of important trade routes,[15] but as Chinese authorities closed the borders between Tibet Autonomous Region and Ladakh in the 1960s, international trade dwindled. Since 1974, the Government of India has successfully encouraged tourism in Ladakh. 
+						As Ladakh is strategically important, the Indian military maintains a strong presence in the region.</p>
                     </div></a>
                 </div>      
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
-                        <img src="Continents/AustralliaOceania/images/Thumbnail-AustralliaOceania.jpg" alt="blog-three">
-                        <div class="blog-date">30 Nov,19</div>
+                        <img src="https://images.pexels.com/photos/5458388/pexels-photo-5458388.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="blog-three">
+                        <div class="blog-date">Amritsar, Punjab</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\AustralliaOceania\Destination Explorer - AustralliaOceania.html">Australlia/Oceania</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo nostrum impedit 
-                            ipsam perspiciatis ratione sapiente quasi optio reprehenderit, labore consequuntur suscipit cum quas.
-                             Officiis dolorem asperiores, ut necessitatibus quas doloremque?</p>
+                        <h3><a href="Places/Destination Explorer - India.html#Golden-Temple">Golden Temple</h3>
+                        <p>The Golden Temple is an open house of worship for all people, from all walks of life and faiths. 
+						It has a square plan with four entrances, and a circumambulation path around the pool. The four entrances to the gurudwara symbolises the Sikh belief in equality and the Sikh view that all people are welcome into their holy place. 
+						The complex is a collection of buildings around the sanctum and the pool</p>
                     </div></a>
                 </div>
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
-                        <img src="Continents/Europe/images/Thumbnail-Europe.jpg" alt="blog-four">
-                        <div class="blog-date">6 Jul,19</div>
+                        <img src="https://images.pexels.com/photos/7023880/pexels-photo-7023880.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="blog-four">
+                        <div class="blog-date">Gujarat</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\Europe\Destination Explorer - Europe.html">Europe<a></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, veniam ratione quam vitae,
-                             quibusdam explicabo rem debitis velit ipsa repellat, impedit nulla fuga? Amet corporis praesentium quae.
-                              Sed, quibusdam necessitatibus.</p>
+                        <h3><a href="Places/Destination Explorer - India.html#Kutch">Kutch<a></h3>
+                        <p>Kutch District is surrounded by the Gulf of Kutch and the Arabian Sea to the south and west, while the northern and eastern parts are surrounded by the Great and Little Rann (seasonal wetlands) of Kutch. 
+						It is also next to the Border with Pakistan. 
+						When there were not many dams built on its rivers, the Rann of Kutch remained wetlands for a large part of the year.</p>
                     </div></a>
                 </div>  
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
-                        <img src="Continents/North America/images/Thumbnail-NorthAmerica.jpg" alt="blog-five">
-                        <div class="blog-date">1 Jun,19</div>
+                        <img src="https://images.pexels.com/photos/4428289/pexels-photo-4428289.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="blog-five">
+                        <div class="blog-date">Southwestern coast of India</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\North America\Destination Explorer - North America.html">North America</a></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sunt eum necessitatibus rem 
-                            dignissimos nulla mollitia cumque, provident officiis non vitae? Animi aut doloremque illum, soluta hic minus 
-                            sint explicabo..</p>
+                        <h3><a href="Places/Destination Explorer - India.html#Goa">Goa</a></h3>
+                        <p>Goa is a state on the southwestern coast of India. It is situated within the Konkan region, geographically separated from the Deccan highlands by the Western Ghats. 
+						It is bound by the Indian states of Maharashtra to the north, and Karnataka to the east and south, with the Arabian Sea in the west. 
+						It is India's smallest state by area and fourth-smallest by population. Goa has the highest GDP per capita among all Indian states, two and a half times as high as the GDP per capita of the country as a whole.</p>
                     </div></a>
                 </div>  
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
-                        <img src="Continents/South America/images/Thumbnail-SouthAmerica.jpg" alt="blog-six">
-                        <div class="blog-date">28 Feb,19</div>
+                        <img src="https://images.pexels.com/photos/13471509/pexels-photo-13471509.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="blog-six">
+                        <div class="blog-date">Mumbai</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\South America\Destination Explorer - South America.html">South America</a></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora dolorum fuga ratione, unde, 
-                            ex quaerat iste numquam nemo nihil nobis rem sint quia recusandae dignissimos quos ut rerum nam.</p>
+                        <h3><a href="Places/Destination Explorer - India.html#Red-Fort">Red Fort</a></h3>
+                        <p>The Red Fort or Lal Qila is a historic fort in the Old Delhi neighbourhood of Delhi, India, that historically served as the main residence of the Mughal emperors. 
+						Emperor Shah Jahan commissioned construction of the Red Fort on 12th May 1638, when he decided to shift his capital from Agra to Delhi.</p>
                     </div></a>
                 </div>        
 				 <div class="blogs">
                     <a href="#">
                     <div class="img">
-                        <img src="Continents/Antarctica/images/Thumbnail-Antarctica.jpg" alt="blog-six">
-                        <div class="blog-date">28 Feb,19</div>
+                        <img src="https://wallpapercave.com/wp/wp6587217.jpg" alt="blog-six">
+                        <div class="blog-date">Gujarat</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\Antarctica\Destination Explorer - Antarctica.html">Antarctica</a></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora dolorum fuga ratione, unde, 
-                            ex quaerat iste numquam nemo nihil nobis rem sint quia recusandae dignissimos quos ut rerum nam.</p>
+                        <h3><a href="Places/Destination Explorer - India.html#Statue-Of-Unity">Statue Of Unity</a></h3>
+                        <p>The Statue of Unity is the world's tallest statue, with a height of 182 metres (597 feet), located near Kevadia in the state of Gujarat, India. 
+						It depicts Indian statesman and independence activist Vallabhbhai Patel (1875–1950), who was the first deputy prime minister and home minister of independent India and an adherent of Mahatma Gandhi.</p>
                     </div></a>
                 </div>        
             </div>
