--- a/Places/Booking Form.html
+++ b/Places/Booking Form.html
@@ -81,10 +81,10 @@
  	<label for="price-range">Price Range:</label>
       <select id="price-range" name="txtprice-range" required>
         <option value="">Select a Price Range</option>
-        <option value="₹0 - ₹1000">₹0 - ₹1000</option>
-        <option value="₹1000 - ₹3000">₹1000 - ₹3000</option>
-        <option value="₹3000 - ₹7000">₹3000 - ₹7000</option>
-        <option value="₹10000+">₹10000+</option>
+        <option value="0 - 1000">₹0 - ₹1000</option>
+        <option value="1000 - 3000">₹1000 - ₹3000</option>
+        <option value="3000 - 7000">₹3000 - ₹7000</option>
+        <option value="10000+">₹10000+</option>
       </select>
 
       <label for="checkin">Check-in Date:</label>
