Added New Places

--- a/index.html
+++ b/index.html
@@ -474,7 +474,10 @@
 			<li><a href="Places/Destination Explorer - India.html#Goa">Goa, India, Asia</a></li>
 			<li><a href="Places/Destination Explorer - India.html#Golden-Temple">Golden Temple, Amritsar, Punjab</a></li>
 			<li><a href="Places/Destination Explorer - India.html#Kutch">Kutch, Gujarat</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Imagicaa">Imagicaa, Lonavala, Maharastra</a></li>
 			<li><a href="Places/Destination Explorer - India.html#Ladakh">Ladakh</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Lal-Darwaja">Lal Daewaja, Ahmedabad, Gujarat</a></li>
+			<li><a href="Places/Destination Explorer - India.html#Manek-Chawk">Manek Chawk, Ahmedabad, Gujarat</a></li>
 			<li><a href="Places/Destination Explorer - India.html#Red-Fort">Red Fort, Mumbai</a></li>
 			<li><a href="Places/Destination Explorer - India.html#Statue-Of-Unity">Statue Of Unity, Gujarat</a></li>
 			<li><a href="Places/Destination Explorer - India.html#Taj-Mahal">Taj Mahal, Agra</a></li>
