--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 </div>
                 </div>
         <div class="blog-header"> Explore</span>
-            <span class ="header-caption">Choose the continent that<span class="color"> you want.</span></span></div>
+            <span class ="header-caption">Choose the place that<span class="color"> you want.</span></span></div>
 			<!--<center><h1>Website In Progress</h1></center>-->
 			<div class="searchbar">
 			<center>
