--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                      based in Ahmedabad, Gujrat, INDIA </span>
                      <br>
                <span class="about-second-line"> With 2 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
-               <div class="cv">
+               <!--<div class="cv">
                 <a download='file' href="About-Pranay.jpg"><button>Download <span class="colors">CV</span></button></a>
-            </div>
+            </div>-->
             </div>
             <!--about picture-->
             <div class="about-img">
