--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
                      based in Ahmedabad, Gujrat, INDIA </span>
                      <br>
                <span class="about-second-line"> With 2 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
-               <!--<div class="cv">
+               <div class="cv">
                 <a download='file' href="About-Pranay.jpg"><button>Download <span class="colors">CV</span></button></a>
-            </div>-->
+            </div>
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/About-Pranay.jpg" alt="Your Image">
+                <img src="images/About-Pranay3.jpg" alt="Your Image">
             </div>
             </div>
     
@@ -198,29 +198,29 @@
                     <div class="services-content">
                            <div class="service-one service wow">
                                <div class="service-img">
-                               <img src="images/About-Dev.png" alt="service-one">
+                               <img src="images/About-Pranay.jpg" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <a href="https://www.instagram.com/iampateldev/" style="color:white" target="_blank"><h2>Dev Patel</h2></a>
-                                <p>Meet Dev, A team member with 2 years of experience</p>
+                                <a href=" " style="color:white" target="_blank"><h2>Pranay Panchal</h2></a>
+                                <p> </p>
                                </div>
                            </div>
                            <div class="service-two service wow">
                                <div class="service-img">
-                               <img src="images/About-Henil.png" alt="service-two">
+                               <img src="images/About-Keny.jpg" alt="service-two">
                                </div>
                                <div class="service-description">
-                                <a href="https://www.instagram.com/_.henil._patel._/" style="color:white" target="_blank"><h2>Henil Patel</h2></a>
-                                <p>Meet Henil, A team member with 1.5 years of experience</p>
+                                <a href=" " style="color:white" target="_blank"><h2>Keny Modi</h2></a>
+                                <p> </p>
                                </div>
                            </div>
                            <div class="service-three service wow">
                             <div class="service-img">
-                               <img src="images/About-Pratham.png" alt="service-three">
+                               <img src="images/About-Khushita.jpg" alt="service-three">
                             </div>
                             <div class="service-description">
-                                <a href="https://www.instagram.com/hpratham_786/" style="color:white" target="_blank"><h2>Pratham Hingu</h2></a>
-                                <p>Meet Pratham, A team member with 1.2 years of experience</p>
+                                <a href=" " style="color:white" target="_blank"><h2>Khushita Panchal</h2></a>
+                                <p> </p>
                             </div>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="js-progress wow">80%</div>
+                 <div class="js-progress wow">20%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -463,7 +463,7 @@
                 </div>
                 </div>
         <div class="blog-header"> Explore</span>
-            <span class ="header-caption">Choose the place that<span class="color"> you want.</span></span></div>
+            <span class ="header-caption">Choose the continent that<span class="color"> you want.</span></span></div>
 			<!--<center><h1>Website In Progress</h1></center>-->
 			<div class="searchbar">
 			<center>
